--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,8 @@
+
+* {
+  box-sizing: border-box;
+}
+
 html {
   background-color: grey;
   color: black;
@@ -10,13 +15,11 @@ body {
 }
 
 header {
-  height: 100px;
+  background: pink;
 }
 
 h1 {
-  float: left;
   font-size: 30px;
-  margin-bottom: 20px;
 }
 
 h2 {
